--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ psycopg2==2.6.2
 pycparser==2.17
 python-editor==1.0.3
 pytz==2016.10
+redis==2.10.5
+requests==2.13.0
 six==1.10.0
 SQLAlchemy==1.1.4
 tornadis==0.8.0
