fix: fix errors

--- a/server/alembic.ini
+++ b/server/alembic.ini
@@ -29,7 +29,7 @@ script_location = models/migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://werobot:werobot@localhost:5432/werobot
+sqlalchemy.url = postgresql+psycopg2://webrobot:webrobot@localhost:5432/webrobot
 
 
 # Logging configuration
